--- a/dem.html
+++ b/dem.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title>vue-dem</title>
 </head>
 <body>
-    <p>练习mac git操作</p>
+    
 </body>
 </html>
